[package]
name = "mosa-inflate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inflate = "0.4.5"
byteorder = "1.5.0"
zune-inflate = { version = "0.2", default-features = false, features = ["zlib"] }